# javacode-testtask

./: .mypy.ini  README.md  pyproject.toml
envs/local/dev/: .env  docker-compose.yml
envs/local/test/: docker-compose.yml
migrations/: env.py
migrations/versions/: b200bb6ec2fe_base.py
src/: app.py  config.py  controllers.py  database.py  enums.py  environment.py  models.py  routes.py  schemas.py
