[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]


[tool.poetry]
authors = ["Eugene <eugeneturkin@gmail.com>"]
description = ""
name = "javacode-testtask"
readme = "README.md"
version = "0.1.0"


[tool.poetry.dependencies]
python = "3.11.4"


[tool.poetry.group.app]
optional = true


[tool.poetry.group.app.dependencies]
alembic = "1.13.2"
asyncpg = "0.29.0"
fastapi = "0.115.0"
mypy = "1.11.2"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.5.2"
sqlalchemy = {version = "2.0.35", extras = ["asyncio"]}
uvicorn = "0.30.6"
